sw/source/filter/ww8/ww8atr.cxx
@@ -1069,7 +1069,7 @@ void WW8AttributeOutput::OutputFKP(bool bForce)
     if (!m_rWW8Export.pO->empty() || bForce)
     {
         m_rWW8Export.m_pChpPlc->AppendFkpEntry( m_rWW8Export.Strm().Tell(),
-                m_rWW8Export.pO->size(), m_rWW8Export.pO->data() );
+                m_rWW8Export.pO->size(), m_rWW8Export.pO->data(), m_rWW8Export.pO->empty() );
         m_rWW8Export.pO->clear();
     }
 }
